infra/k8s/auth-depl.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: foodiehub.dev
      http:
        paths:
          - path: /auth/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: auth
          image: utkarsh852/userservice
          ports:
            - containerPort: 3001
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: userservice
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
