infra/k8s/client-depl.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: foodiehub.dev
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client
                port:
                  number: 3000
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl 
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: utkarsh852/client
          # env:
          #   - name: MONGO_URI
          #     value: mongodb://mongo-service:27017/auth
          #   - name: JWT_SECRET
          #     value: secretkey
          #   - name: JWT_EXPIRY
          #     value: 1h
          #   - name: PORT
          #     value: "3001"
          ports:
            - containerPort: 3000
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
