infra/k8s/order-depl.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: foodiehub.dev
      http:
        paths:
          - path: /auth/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3001
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: order
          image: utkarsh852/orderservice
          ports:
            - containerPort: 3003
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: orderservice
spec:
  selector:
    app: orderservice
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: LoadBalancer
